# coursework

client/: State.txt  client.cpp  nothing.txt  test2.txt
logger_server/: logger.h  logger_builder.h  logger_builder_concrete.h  logger_concrete.h  logger_server.cpp
server/: AVL.h  CMakeLists.txt  allocator_border_descriptor.h  allocator_buddies.h  allocator_on_sorte_list.h  allocator_operator_new.h  associotive_conteiner.h  binary_search_tree.h  database.h  file_inner  flyweight_for_string.h  logger_IPC.h  main.cpp  memory.h  red_black_tree.h  splay_tree.h
